fix: now stripe is connected to dashbaord, not using mock.

--- a/api/.env.example
+++ b/api/.env.example
@@ -10,6 +10,6 @@ STRIPE_MOCK_API_KEY=
 
 # Services URLs
 STRIPE_RETURN_URL=http://localhost:3000/payment/success
-STRIPE_API_BASE=http://stripe-mock:12111
+STRIPE_API_BASE=
 ORDERS_SERVICE_URL=http://orders:8002
 PAYMENTS_SERVICE_URL=http://payments:8006
