feat: auth - added opentelemetry decorators to auth service.

--- a/api/services/auth/requirements.txt
+++ b/api/services/auth/requirements.txt
@@ -12,3 +12,8 @@ asyncpg
 alembic
 psycopg2-binary
 dotenv
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-requests
+opentelemetry-exporter-otlp
