feat: orders - added circuit breaker, retries, and graceful degredation in case payments crashes.

--- a/api/services/orders/requirements.txt
+++ b/api/services/orders/requirements.txt
@@ -13,3 +13,8 @@ psycopg2-binary
 PyJWT
 grpcio
 grpcio-tools
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-requests
+opentelemetry-exporter-otlp 
