fix: now all services pass tests(ignore profile because it is going to be deleted).

--- a/api/services/products/requirements.txt
+++ b/api/services/products/requirements.txt
@@ -14,3 +14,8 @@ mongomock_motor
 asyncio
 python-multipart
 PyJWT
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-requests
+opentelemetry-exporter-otlp
