--- a/api/services/statics/requirements.txt
+++ b/api/services/statics/requirements.txt
@@ -9,3 +9,8 @@ python-multipart
 pytest-cov
 dotenv
 PyJWT
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-requests
+opentelemetry-exporter-otlp
