--- a/api/services/payments/requirements.txt
+++ b/api/services/payments/requirements.txt
@@ -13,3 +13,8 @@ psycopg2-binary
 stripe==7.7.0
 grpcio 
 grpcio-tools
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-requests
+opentelemetry-exporter-otlp
