--- a/api/services/profile/requirements.txt
+++ b/api/services/profile/requirements.txt
@@ -7,3 +7,8 @@ pytest-cov==4.1.0
 httpx==0.25.2
 python-dotenv==1.0.0
 PyJWT
+opentelemetry-api
+opentelemetry-sdk
+opentelemetry-instrumentation-fastapi
+opentelemetry-instrumentation-requests
+opentelemetry-exporter-otlp
