feat: added openapi contracts for each service, deleted profile container(not used and not important for our system)

--- a/api/services/nginx/nginx.conf
+++ b/api/services/nginx/nginx.conf
@@ -51,15 +51,6 @@ http {
         # server api-products-5:8003;
         keepalive 32;
     }
-    upstream profile_backend { 
-        least_conn;
-        server api-profile-1:8004;
-        # server api-profile-2:8004;
-        # server api-profile-3:8004;
-        # server api-profile-4:8004;
-        # server api-profile-5:8004;
-        keepalive 32;
-    }
     upstream static_backend { 
         least_conn;
         server api-statics-1:8005;
@@ -163,24 +154,8 @@ http {
             limit_req zone=api_limit burst=200 nodelay;
         }
 
-        location /api/profile/ {
-            proxy_pass http://profile_backend/;
-            proxy_http_version 1.1;
-            proxy_set_header Connection "";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-
-            proxy_connect_timeout 30s;
-            proxy_send_timeout 30s;
-            proxy_read_timeout 30s;
-
-            limit_req zone=api_limit burst=200 nodelay;
-        }
-
         location / {
-            return 404 '{"error": "Route not found", "available_routes": ["/api/auth/", "/api/payments/", "/api/orders/", "/api/products/", "/api/profile/", "/api/static/", "/health"]}';
+            return 404 '{"error": "Route not found", "available_routes": ["/api/auth/", "/api/payments/", "/api/orders/", "/api/products/", "/api/static/", "/health"]}';
             add_header Content-Type application/json;
         }
     }
