feat: auth - db pooling added, all tests passed

--- a/api/services/auth/app/.env
+++ b/api/services/auth/app/.env
@@ -12,3 +12,9 @@ REFRESH_TOKEN_EXPIRE_DAYS=7
 ENVIRONMENT=development
 
 DATABASE_URL="postgresql+asyncpg://postgres:toor@auth_db:5432/auth"
+
+DB_POOL_SIZE=20
+DB_MAX_OVERFLOW=10
+DB_POOL_TIMEOUT=30
+DB_POOL_RECYCLE=1800
+DB_POOL_PRE_PING=true
