--- a/api/.env.example
+++ b/api/.env.example
@@ -5,6 +5,9 @@ POSTGRES_PASSWORD=
 STRIPE_PUBLIC_KEY=
 STRIPE_SECRET_KEY=
 
+# For stripe-mock
+STRIPE_MOCK_API_KEY=
+
 # Services URLs
 STRIPE_RETURN_URL=http://localhost:3000/payment/success
 STRIPE_API_BASE=
