--- a/api/services/auth/app/.env
+++ b/api/services/auth/app/.env
@@ -12,3 +12,8 @@ REFRESH_TOKEN_EXPIRE_DAYS=7
 ENVIRONMENT=development
 
 DATABASE_URL="postgresql+asyncpg://postgres:toor@auth_db:5432/auth"
+
+DB_POOL_SIZE=50
+DB_MAX_OVERFLOW=50
+DB_POOL_TIMEOUT=60
+DB_POOL_RECYCLE=3600
