--- a/api/services/auth/app/.env
+++ b/api/services/auth/app/.env
@@ -11,7 +11,7 @@ REFRESH_TOKEN_EXPIRE_DAYS=7
 
 ENVIRONMENT=development
 
-DATABASE_URL="postgresql+asyncpg://postgres:toor@auth_db:5432/auth"
+DATABASE_URL=postgresql+asyncpg://postgres:toor@pgbouncer:6432/auth
 
 DB_POOL_SIZE=50
 DB_MAX_OVERFLOW=50
