--- a/api/services/auth/pgbouncer.ini
+++ b/api/services/auth/pgbouncer.ini
@@ -1,11 +1,11 @@
 [databases]
-auth = host=auth_db port=5432 dbname=auth
+auth = host=auth_db port=5432 dbname=auth user=postgres password=toor
 
 [pgbouncer]
 listen_addr = 0.0.0.0
 listen_port = 6432
 auth_type = trust
-auth_file = /opt/bitnami/pgbouncer/conf/userlist.txt
+auth_file = /etc/pgbouncer/userlist.txt
 pool_mode = transaction
 max_client_conn = 500
 default_pool_size = 50
@@ -15,7 +15,6 @@ min_pool_size = 10
 query_wait_timeout = 30
 idle_transaction_timeout = 15
 server_idle_timeout = 60
-server_round_robin = 1
 log_connections = 1
 log_disconnections = 1
 log_pooler_errors = 1
