feat: auth - redis baseline added.

--- a/api/services/auth/app/.env
+++ b/api/services/auth/app/.env
@@ -17,3 +17,8 @@ DB_POOL_SIZE=50
 DB_MAX_OVERFLOW=50
 DB_POOL_TIMEOUT=60
 DB_POOL_RECYCLE=3600
+
+REDIS_URL=redis://redis:6379/0
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=0
