--- a/api/services/auth/requirements.txt
+++ b/api/services/auth/requirements.txt
@@ -17,3 +17,5 @@ opentelemetry-sdk
 opentelemetry-instrumentation-fastapi
 opentelemetry-instrumentation-requests
 opentelemetry-exporter-otlp
+redis
+aioredis
