feat: auth - now redis works perfectly.

--- a/api/services/auth/requirements.txt
+++ b/api/services/auth/requirements.txt
@@ -17,5 +17,4 @@ opentelemetry-sdk
 opentelemetry-instrumentation-fastapi
 opentelemetry-instrumentation-requests
 opentelemetry-exporter-otlp
-redis
-aioredis
+redis==4.6.0
