fix: nginx - use round robin instead of least connection.

--- a/api/services/nginx/nginx.conf
+++ b/api/services/nginx/nginx.conf
@@ -18,46 +18,41 @@ http {
     limit_req_zone $binary_remote_addr zone=api_limit:10m rate=200r/s;
 
     upstream auth_backend { 
-        least_conn;
         server api-auth-1:8000;
-        # server api-auth-2:8000;
-        # server api-auth-3:8000;
-        # server api-auth-4:8000;
-        # server api-auth-5:8000;
+        server api-auth-2:8000;
+        server api-auth-3:8000;
+        server api-auth-4:8000;
+        server api-auth-5:8000;
         keepalive 32;
     }
     upstream orders_backend { 
-        least_conn;
         server api-orders-1:8002;
-        # server api-orders-2:8002;
-        # server api-orders-3:8002;
-        # server api-orders-4:8002;
-        # server api-orders-5:8002;
+        server api-orders-2:8002;
+        server api-orders-3:8002;
+        server api-orders-4:8002;
+        server api-orders-5:8002;
         keepalive 32;
     }
     upstream payments_backend { 
-        least_conn;
         server api-payments-1:8001;
-        # server api-payments-2:8001;
-        # server api-payments-3:8001;
+        server api-payments-2:8001;
+        server api-payments-3:8001;
         keepalive 32;
     }
     upstream products_backend { 
-        least_conn;
         server api-products-1:8003;
-        # server api-products-2:8003;
-        # server api-products-3:8003;
-        # server api-products-4:8003;
-        # server api-products-5:8003;
+        server api-products-2:8003;
+        server api-products-3:8003;
+        server api-products-4:8003;
+        server api-products-5:8003;
         keepalive 32;
     }
     upstream static_backend { 
-        least_conn;
         server api-statics-1:8005;
-        # server api-statics-2:8005;
-        # server api-statics-3:8005;
-        # server api-statics-4:8005;
-        # server api-statics-5:8005;
+        server api-statics-2:8005;
+        server api-statics-3:8005;
+        server api-statics-4:8005;
+        server api-statics-5:8005;
         keepalive 32;
     }
 
