--- a/api/services/orders/app/.env
+++ b/api/services/orders/app/.env
@@ -11,3 +11,15 @@ DATABASE_URL=postgresql+asyncpg://postgres:toor@orders_db:5432/orders_db
 JWT_SECRET_KEY=your-super-secret-key-change-in-production
 PAYMENTS_SERVICE_URL=http://localhost:8001
 INTERNAL_API_KEY=internal_api_key_for_now
+
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_DB=1
+REDIS_MAX_CONNECTIONS=10
+CACHE_ENABLED=true
+CACHE_TTL=60
+
+DB_POOL_SIZE=20
+DB_MAX_OVERFLOW=40
+DB_POOL_TIMEOUT=30
+DB_POOL_RECYCLE=3600
