--- a/api/services/orders/requirements.txt
+++ b/api/services/orders/requirements.txt
@@ -17,4 +17,5 @@ opentelemetry-api
 opentelemetry-sdk
 opentelemetry-instrumentation-fastapi
 opentelemetry-instrumentation-requests
-opentelemetry-exporter-otlp 
+opentelemetry-exporter-otlp
+redis
