--- a/api/services/payments/requirements.txt
+++ b/api/services/payments/requirements.txt
@@ -18,3 +18,4 @@ opentelemetry-sdk
 opentelemetry-instrumentation-fastapi
 opentelemetry-instrumentation-requests
 opentelemetry-exporter-otlp
+redis
