--- a/api/services/orders/app/.env
+++ b/api/services/orders/app/.env
@@ -23,3 +23,7 @@ DB_POOL_SIZE=20
 DB_MAX_OVERFLOW=40
 DB_POOL_TIMEOUT=30
 DB_POOL_RECYCLE=3600
+
+PAYMENT_CHECKOUT_MODE=false
+PAYMENT_SUCCESS_URL=http://localhost/api/payments/checkout_success
+PAYMENT_CANCEL_URL=http://localhost/api/payment/checkout_cancel
