--- a/api/services/orders/app/.env
+++ b/api/services/orders/app/.env
@@ -11,7 +11,7 @@ DATABASE_URL=postgresql+asyncpg://postgres:toor@orders_db:5432/orders_db
 JWT_SECRET_KEY=your-super-secret-key-change-in-production
 PAYMENTS_SERVICE_URL=http://localhost:8001
 INTERNAL_API_KEY=internal_api_key_for_now
-
+AUTH_SERVICE_URL=http://auth:8000
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=1
