feat: auth - added auth grpc client, to retreive the commission report info from payments service.

--- a/api/services/auth/app/.env
+++ b/api/services/auth/app/.env
@@ -22,3 +22,7 @@ REDIS_URL=redis://redis:6379/0
 REDIS_HOST=redis
 REDIS_PORT=6379
 REDIS_DB=0
+
+
+COMMISSION_GRPC_HOST=payments
+COMMISSION_GRPC_PORT=50051
